CB-24471 Updated image filtering logic for CentOS 7 to RedHat 8 upgrade. The fixed implementation on 7.2.17 returnes RedHat 8 image if the components are not changed relative to the current CentOS 7 image (so it is an OS only upgrade), it returns RedHat 8 image even if it was created before the current CentOS 7 image which is possible because of our image burning process is not deterministic (see CB-24323). The returned RedHat 8 image is the latest possble image.